# cognition-takehome

./: .env.example  .gitignore  CHANGELOG.md  README.md  REPORT.md  docker-compose.yml
.agents/skills/testing-orchestrator-dashboard/: SKILL.md
docs/: ARCHITECTURE.md  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  PHASE_6.md  PLAN.md  REFACTOR_POLLING.md  TAKEHOME.md
orchestrator/: Dockerfile  pyproject.toml
orchestrator/app/: config.py  dashboard.py  db.py  devin_client.py  github_client.py  main.py  poller.py  prompts.py  scanner.py  session_tracker.py  state_machine.py  webhook.py
orchestrator/scripts/: seed_sample_data.py
orchestrator/templates/: dashboard.html
orchestrator/tests/: conftest.py  test_db.py  test_devin_client.py  test_poller.py  test_prompts.py  test_session_tracker.py  test_state_machine.py  test_webhook.py
